--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ display: flex;
 .blog-link
 {
   text-decoration: none;
-  color:#1f7d0c;
+  color:darkolivegreen;
   font-size: 22px;
   font-style: italic;
   font-weight: bold;
