--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ html
 body
 {
     text-align: center;
-    padding-left: 400px;
-    padding-right: 400px;
+    padding-left: 25%;
+    padding-right: 25%;
 }
 
 .link
